--- a/line-intersection/index.html
+++ b/line-intersection/index.html
@@ -15,6 +15,7 @@
 
         <script src="/p5/p5.js"></script>
         <script src="/p5/addons/p5.sound.min.js"></script>
+        <script src="line.js"></script>
         <script src="sketch.js"></script>
     </head>
 
