--- a/NeuralNetwork Library/index.html
+++ b/NeuralNetwork Library/index.html
@@ -14,8 +14,8 @@
         </style>
 
         <script src="../p5/p5.min.js"></script>
-        <script src="../p5/p5/addons/p5.sound.min.js"></script>
 
+        <script src="matrix.js"></script>
         <script src="neuralNetwork.js"></script>
         <script src="sketch.js"></script>
     </head>
