--- a/line-intersection/index.html
+++ b/line-intersection/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="">
-
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>p5.js template</title>
 
         <style>
@@ -14,13 +13,10 @@
         </style>
 
         <script src="/p5/p5.js"></script>
-        <script src="/p5/addons/p5.sound.min.js"></script>
+        <script src="/p5/addons/p5.sound.js"></script>
         <script src="line.js"></script>
         <script src="sketch.js"></script>
     </head>
 
-    <body>
-        
-    </body>
-
+    <body></body>
 </html>
