--- a/2d-rays/index.html
+++ b/2d-rays/index.html
@@ -16,6 +16,9 @@
         <script src="/p5/addons/p5.sound.js"></script>
 
         <script src="sketch.js"></script>
+        <script src="boundary.js"></script>
+        <script src="ray.js"></script>
+        <script src="particle.js"></script>
     </head>
 
     <body></body>
