--- a/game-demo/index.html
+++ b/game-demo/index.html
@@ -15,8 +15,25 @@
         <script src="/p5/p5.js"></script>
         <script src="/p5/addons/p5.sound.js"></script>
 
+        <script src="entity.js"></script>
         <script src="sketch.js"></script>
     </head>
 
-    <body style="height: 100vh; display: flex; justify-content: center; align-items: center"></body>
+    <body></body>
+
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            cursor: none;
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+    </style>
 </html>
