--- a/marching-squares/index.html
+++ b/marching-squares/index.html
@@ -17,6 +17,9 @@
     <script src="/p5/addons/p5.sound.js"></script>
 
     <script src="simplexNoise.js"></script>
+    <script src="boundary.js"></script>
+    <script src="ray.js"></script>
+    <script src="particle.js"></script>
     <script src="sketch.js"></script>
 </head>
 
