--- a/game-of-life/index.html
+++ b/game-of-life/index.html
@@ -45,6 +45,10 @@
                 <button class="ctrls" id="clear">CLEAR</button>
             </div>
         </div>
+        <div class="special">
+            <p>SPECIAL PATTERNS</p>
+            <button class="special-key" id="star">STAR</button>
+        </div>
     </div>
     <div class="screen">
         <div id="canvas"></div>
